Bug 1667032 - Fix signed-vs-unsigned comparison in nsPrinterWin::CopyDefaultDevmodeW(). r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D91256